@@ -20,7 +20,6 @@ import java.text.SimpleDateFormat;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Configuration
 public class ExportConfig {
@@ -76,7 +75,7 @@ public class ExportConfig {
     public CsvSchema csvSchema() {
         List<String> fields = Arrays.stream(GitRepoDto.class.getDeclaredFields())
                 .map(Field::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         CsvSchema.Builder schemaBuilder = CsvSchema.builder();
         for (String field : fields) {
