@@ -16,8 +16,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.stream.Collectors;
-
 @Slf4j
 @RestController
 @RequestMapping("/l")
@@ -40,7 +38,7 @@ public class LanguageController {
                         .stream()
                         .map(Language::getName)
                         .sorted()
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
