@@ -17,7 +17,6 @@ import org.springframework.stereotype.Component;
 import java.lang.reflect.Type;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Component
@@ -50,7 +49,7 @@ public class JsonObjectToGraphQlErrorResponse implements Converter<JsonObject, G
             List<SourceLocation> locations = StreamSupport.stream(array.spliterator(), true)
                     .map(JsonElement::getAsJsonObject)
                     .map(sourceLocationConverter::convert)
-                    .collect(Collectors.toList());
+                    .toList();
             builder.locations(locations);
         }
 
